k8s/casa/apps/myownradio/myownradio-channel-bot.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: channel-bot
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: channel-bot
  template:
    metadata:
      labels:
        deployment: channel-bot
    spec:
      volumes:
        - name: channel-bot-storage
          persistentVolumeClaim:
            claimName: channel-bot-storage
        - name: channel-bot-host-mount
          hostPath:
            path: /data/radioterio
      containers:
        - name: channel-bot
          image: pldin601/myownradio-channel-bot:latest
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "400m"
          volumeMounts:
            - mountPath: "/var/lib/torrent-bot/storage"
              name: channel-bot-storage
            - mountPath: "/data/radioterio"
              name: channel-bot-host-mount
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: dockerconfig
