k8s/casa/apps/myownradio/myownradio-mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myownradio-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: myownradio-mysql
  template:
    metadata:
      labels:
        deployment: myownradio-mysql
    spec:
      volumes:
        - name: myownradio-mysql-data
          persistentVolumeClaim:
            claimName: myownradio-mysql-data
      containers:
        - name: mysql
          image: mysql:8.0.29-oracle
          args:
            - --log_bin_trust_function_creators=1
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "400m"
          volumeMounts:
            - mountPath: "/var/lib/mysql"
              name: myownradio-mysql-data
