k8s/casa/apps/myownradio/radio-manager-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radio-manager-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: radio-manager-backend
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
      labels:
        deployment: radio-manager-backend
    spec:
      containers:
        - name: streamer
          image: pldin601/myownradio-radio-manager-backend:23.10.6437154956-0eef4d1
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1024Mi"
              cpu: "750m"
      imagePullSecrets:
        - name: dockerconfig
