k8s/casa/apps/myownradio/web-egress-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radiomanager-web-egress-process
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      deployment: radiomanager-web-egress-process
  template:
    metadata:
      labels:
        deployment: radiomanager-web-egress-process
    spec:
      containers:
        - name: radiomanager-web-egress-process
          image: pldin601/myownradio-radiomanager-web-egress-process:23.10.6519167306-1619787
          securityContext:
            privileged: true
          volumeMounts:
            - name: dev-dri
              mountPath: /dev/dri
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1024Mi"
              cpu: "1500m"
      volumes:
        - name: dev-dri
          hostPath:
            path: /dev/dri
