k8s/casa/apps/myownradio/myownradio-fileserver-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: myownradio-fileserver
spec:
  selector:
    deployment: myownradio-fileserver
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
