k8s/casa/apps/myownradio/myownradio-tracks-storage-backend-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: myownradio-tracks-storage-backend
spec:
  selector:
    deployment: myownradio-tracks-storage-backend
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
