k8s/casa/apps/myownradio/pubsub-backend-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: radioterio-pubsub-backend
spec:
  selector:
    deployment: radioterio-pubsub-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
