k8s/casa/apps/myownradio/radio-manager-backend-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: myownradio-radio-manager-backend
spec:
  selector:
    deployment: myownradio-radio-manager-backend
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
