k8s/casa/apps/myownradio/web-egress-controller.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: radiomanager-web-egress-controller
spec:
  selector:
    deployment: radiomanager-web-egress-controller
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radiomanager-web-egress-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: radiomanager-web-egress-controller
  template:
    metadata:
      labels:
        deployment: radiomanager-web-egress-controller
    spec:
      serviceAccountName: radiomanager-web-egress-controller
      containers:
        - name: radiomanager-web-egress-controller
          image: pldin601/myownradio-radiomanager-web-egress-controller:23.10.6605235667-6e0e17b
          resources:
            requests:
              memory: "512Mi"
              cpu: "200m"
            limits:
              memory: "1024Mi"
              cpu: "500m"
