k8s/casa/apps/myownradio/myownradio-fileserver-ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: myownradio-fileserver
  namespace: myownradio
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`fs1.myownradio.biz`)
      services:
        - kind: Service
          name: myownradio-fileserver
          port: http
          scheme: http
  tls:
    certResolver: default
